--- a/src/css/SelectedWork.css
+++ b/src/css/SelectedWork.css
@@ -1,28 +1,28 @@
 .modalStyling {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   font-family: century;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 
-  overflow: auto;
+  overflow-y: auto;
 }
 
-.headlineText {
+/* .headlineText {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+} */
 
-.modalContents {
+/* .modalContents {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   padding: 0 20px;
-}
+} */
 
 .closeButton {
   position: absolute;
@@ -39,7 +39,7 @@ p {
 }
 
 .modalImage {
-  display: flex;
+  /* display: flex; */
   object-fit: contain;
   width: 100%;
   max-height: 550px;
