--- a/src/css/SelectedWork.css
+++ b/src/css/SelectedWork.css
@@ -1,6 +1,6 @@
 .modalStyling {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
   font-family: century;
   position: fixed;
   top: 0;
@@ -11,18 +11,17 @@
   overflow-y: auto;
 }
 
-/* .headlineText {
+.centerHeadlineText {
   display: flex;
   flex-direction: column;
   align-items: center;
-} */
+}
 
-/* .modalContents {
+.modalContents {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
   padding: 0 20px;
-} */
+}
 
 .closeButton {
   position: absolute;
@@ -36,6 +35,12 @@ p {
 
 #turnOff:hover {
   cursor: pointer;
+}
+
+.imageLayout {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .modalImage {
