--- a/src/css/Thumbnail.css
+++ b/src/css/Thumbnail.css
@@ -1,8 +1,10 @@
 .thumbnailSize {
   display: flex;
   flex-direction: column;
-  min-width: 200px;
-  min-height: 200px;
+  width: 300px;
+  height: 350px;
+  /* min-width: 200px;
+  min-height: 200px; */
   margin: 30px 30px;
   border-radius: 0 0 2px 2px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.14);
@@ -21,7 +23,7 @@
   display: flex;
   font-family: century;
   margin-bottom: 5px;
-  margin-top: -32px;
+  margin-top: 0px;
 }
 
 @media screen and (max-width: 923px) {
