writing in details for work descriptions

--- a/src/css/Thumbnail.css
+++ b/src/css/Thumbnail.css
@@ -8,6 +8,7 @@
   margin: 30px 30px;
   border-radius: 0 0 2px 2px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.14);
+  vertical-align: bottom;
 }
 
 .mockImage img {
