--- a/src/css/SelectedWork.css
+++ b/src/css/SelectedWork.css
@@ -15,11 +15,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-decoration: underline;
 }
 
 .modalContents {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   padding: 0 20px;
 }
 
@@ -31,6 +33,7 @@
 
 p {
   text-align: justify;
+  line-height: 1.5;
 }
 
 #turnOff:hover {
@@ -39,12 +42,10 @@ p {
 
 .imageLayout {
   display: flex;
-  flex-direction: column;
   flex-wrap: wrap;
 }
 
 .modalImage {
-  /* display: flex; */
   object-fit: contain;
   width: 100%;
   max-height: 550px;
