--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,48 +1,28 @@
-.navigation {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 30px;
-}
-
 .imageAdjust {
   width: 33px;
 }
 
-.currentPage {
-  text-decoration: underline;
+.navbar-nav > li > a {
+  color: black !important;
 }
 
-.webButtons {
-  margin: 0 70px;
-  font-size: 20px;
-  text-decoration: none;
+.fontStyling {
   font-family: century;
-  color: black;
-  text-decoration: none;
+  font-size: 20px;
 }
-/* 960 */
-.webButtons:hover {
+
+.navbar-default {
+  background-color: white !important;
+  border-color: white !important;
+  box-shadow: none !important;
+  /* -webkit-box-shadow: none !important; */
+  background-image: none !important;
+}
+
+.navbar-nav > li > a:hover {
   opacity: 0.4;
 }
 
 .imageAdjust:hover {
   opacity: 0.4;
-}
-
-@media screen and (max-width: 902px) {
-  .webButtons {
-    font-size: 18px;
-    justify-content: center;
-    margin: 0 45px;
-  }
-  .imageAdjust {
-    width: 30px;
-  }
-}
-
-@media screen and (max-width: 504px) {
-  .navigation {
-    align-items: center;
-  }
 }
