--- a/src/css/LogoIcon.css
+++ b/src/css/LogoIcon.css
@@ -1,12 +1,6 @@
 .style {
-  /* border: 2px solid black; */
-  max-width: 350px;
-  max-height: 350px;
-}
-
-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 30px;
+  max-width: 100%;
+  height: auto;
+  margin-top: 25px;
+  margin-bottom: 25%;
 }
