--- a/src/css/Thumbnail.css
+++ b/src/css/Thumbnail.css
@@ -1,13 +1,9 @@
 .thumbnailSize {
-  display: flex;
-  flex-direction: column;
   width: 300px;
   height: 350px;
-  /* min-width: 200px;
-  min-height: 200px; */
+  min-width: 200px;
+  min-height: 200px;
   margin: 30px 30px;
-  border-radius: 0 0 2px 2px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.14);
   vertical-align: bottom;
 }
 
@@ -21,20 +17,7 @@
 }
 
 .text {
-  display: flex;
   font-family: century;
-  margin-bottom: 5px;
-  margin-top: 0px;
-}
-
-@media screen and (max-width: 923px) {
-  .thumbnailSize {
-    margin: 20px 20px;
-  }
-}
-
-@media screen and (max-width: 504px) {
-  .thumbnailSize {
-    margin: 5px 5px;
-  }
+  /* margin-bottom: 5px; */
+  /* margin-top: 0px; */
 }
