--- a/src/css/Thumbnail.css
+++ b/src/css/Thumbnail.css
@@ -1,23 +1,28 @@
 .thumbnailSize {
+  height: 320px;
+  min-width: 150px;
+  min-height: 150px;
+  margin: 30px 50px;
+}
+
+.thumbnail {
   width: 300px;
-  height: 350px;
-  min-width: 200px;
-  min-height: 200px;
-  margin: 30px 30px;
-  vertical-align: bottom;
+  margin: 2%;
 }
 
 .mockImage img {
   display: flex;
   object-fit: contain;
   width: 100%;
-  max-height: 250px;
-  max-width: 250px;
+  max-height: 225px;
+  max-width: 225px;
   padding: 15px 5px 0;
+  margin-bottom: 10px;
 }
 
 .text {
   font-family: century;
-  /* margin-bottom: 5px; */
-  /* margin-top: 0px; */
+  margin-bottom: 5px;
+  font-size: 18px;
+  text-align: center;
 }
