--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,24 +1,24 @@
 .aboutMeStyle {
   display: flex;
   flex-direction: row;
-  align-content: space-around;
-  /* align-items: flex-start; */
+  /* align-content: space-around; */
+  /* flex-wrap: wrap; */
 }
 
-.makeColumn {
+/* .makeColumn {
   display: flex;
   flex-direction: column;
-}
+} */
 
 .paragraphStyling {
   font-size: 20px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   text-align: justify;
-  width: 450px;
+  width: 70%;
   line-height: 1.5;
   font-family: century;
-  margin-left: 30px;
-  margin-top: 40px;
+  margin-left: 2%;
+  margin-top: 5%;
 }
 
 .imageFormat {
@@ -39,7 +39,7 @@
   }
 
   .paragraphStyling {
-    margin-left: 0;
+    margin-left: 15%;
     margin-top: 20px;
   }
 }
