create bigger margin between text and bottom of webpage

--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -3,6 +3,10 @@
   flex-direction: row;
 }
 
+.makeColumn {
+  margin-bottom: 10%;
+}
+
 .paragraphStyling {
   font-size: 20px;
   letter-spacing: 1px;
